bin/tests/snapshots/attribute_ordering__2ec956001ac25d20343ca4993066ddce_fix.snap
---
source: bin/tests/attribute_ordering.rs
assertion_line: 7
---
{
  apple = {
    zebra = true;
    ant = true;
  };
  zebra = true;
}
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,7 +1,7 @@
 {
   apple = {
+    ant = true;
     zebra = true;
-    ant = true;
   };
   zebra = true;
 }
