bin/tests/snapshots/attribute_ordering__2ec956001ac25d20343ca4993066ddce_lint_errfmt.snap
---
source: bin/tests/attribute_ordering.rs
assertion_line: 7
---
{
  apple = {
    zebra = true;
    ant = true;
  };
  zebra = true;
}
---
<temp_file_path>>4:5:W:31:[attribute_ordering] `ant` is out of alphabetical order
