bin/tests/snapshots/attribute_ordering__2ec956001ac25d20343ca4993066ddce_lint_json.snap
---
source: bin/tests/attribute_ordering.rs
assertion_line: 7
---
{
  apple = {
    zebra = true;
    ant = true;
  };
  zebra = true;
}
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "attribute_ordering",
      "note": "Attributes are not in alphabetical order",
      "code": 31,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 4,
              "column": 5
            },
            "to": {
              "line": 4,
              "column": 16
            }
          },
          "message": "`ant` is out of alphabetical order",
          "suggestion": {
            "at": {
              "from": {
                "line": 2,
                "column": 11
              },
              "to": {
                "line": 5,
                "column": 4
              }
            },
            "fix": "{\n    ant = true;\n    zebra = true;\n  }"
          }
        }
      ]
    }
  ]
}
