bin/tests/snapshots/attribute_ordering__2ec956001ac25d20343ca4993066ddce_lint_stderr.snap
---
source: bin/tests/attribute_ordering.rs
assertion_line: 7
---
{
  apple = {
    zebra = true;
    ant = true;
  };
  zebra = true;
}
---
[attribute_ordering] Warning: Attributes are not in alphabetical order
   ╭─[ <temp_file_path>:4:5 ]
   │
 4 │     ant = true;
   │     ─────┬─────  
   │          ╰─────── ant is out of alphabetical order
───╯
