bin/tests/snapshots/attribute_ordering__6292f0513d1f5f20ab4d5c83543152cc_fix.snap
---
source: bin/tests/attribute_ordering.rs
assertion_line: 7
---
{
  zebra = true;
  enabledCollectors = [ ];
}
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,4 +1,4 @@
 {
+  enabledCollectors = [ ];
   zebra = true;
-  enabledCollectors = [ ];
 }
