bin/tests/snapshots/attribute_ordering__6292f0513d1f5f20ab4d5c83543152cc_lint_errfmt.snap
---
source: bin/tests/attribute_ordering.rs
assertion_line: 7
---
{
  zebra = true;
  enabledCollectors = [ ];
}
---
<temp_file_path>>3:3:W:31:[attribute_ordering] `enabledCollectors` is out of alphabetical order
