bin/tests/snapshots/attribute_ordering__6292f0513d1f5f20ab4d5c83543152cc_lint_json.snap
---
source: bin/tests/attribute_ordering.rs
assertion_line: 7
---
{
  zebra = true;
  enabledCollectors = [ ];
}
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "attribute_ordering",
      "note": "Attributes are not in alphabetical order",
      "code": 31,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 3,
              "column": 3
            },
            "to": {
              "line": 3,
              "column": 27
            }
          },
          "message": "`enabledCollectors` is out of alphabetical order",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 1
              },
              "to": {
                "line": 4,
                "column": 2
              }
            },
            "fix": "{\n  enabledCollectors = [ ];\n  zebra = true;\n}"
          }
        }
      ]
    }
  ]
}
