bin/tests/snapshots/attribute_ordering__7ab1a9e3f81fcee021517dee8af77754_lint_stderr.snap
---
source: bin/tests/attribute_ordering.rs
assertion_line: 7
---
{
  enable = true;
  enableCompletion = true;

  apple = true;
  zebra = true;
}
---
