bin/tests/snapshots/attribute_ordering__7fe6e0cf3e2f33c4fc13878cddf751f0_fix.snap
---
source: bin/tests/attribute_ordering.rs
assertion_line: 7
---
{
  zebra = true;
  yak = true;
  apple = true;
}
---
