bin/tests/snapshots/attribute_ordering__7fe6e0cf3e2f33c4fc13878cddf751f0_lint_errfmt.snap
---
source: bin/tests/attribute_ordering.rs
assertion_line: 7
---
{
  zebra = true;
  yak = true;
  apple = true;
}
---
<temp_file_path>>3:3:W:31:[attribute_ordering] `yak` is out of alphabetical order
