bin/tests/snapshots/attribute_ordering__7fe6e0cf3e2f33c4fc13878cddf751f0_lint_json.snap
---
source: bin/tests/attribute_ordering.rs
assertion_line: 7
---
{
  zebra = true;
  yak = true;
  apple = true;
}
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "attribute_ordering",
      "note": "Attributes are not in alphabetical order",
      "code": 31,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 3,
              "column": 3
            },
            "to": {
              "line": 3,
              "column": 14
            }
          },
          "message": "`yak` is out of alphabetical order",
          "suggestion": null
        }
      ]
    }
  ]
}
